Added model files

--- a/src/Model_Forward.ipynb
+++ b/src/Model_Forward.ipynb
@@ -220,7 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_gw = 24\n",
+    "target_gw = num_gameweeks\n",
     "forward_features = create_forward_features(gw_data_frames, target_gw - 1)\n",
     "\n",
     "# Load target gameweek data\n",
