--- a/src/Model_Goalkeeper.ipynb
+++ b/src/Model_Goalkeeper.ipynb
@@ -220,7 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_gw = 24\n",
+    "target_gw = num_gameweeks\n",
     "# Assume create_goalkeeper_features function is defined as before\n",
     "goalkeeper_features = create_goalkeeper_features(gw_data_frames, target_gw - 1)\n",
     "\n",
