--- a/src/Model_Midfielder.ipynb
+++ b/src/Model_Midfielder.ipynb
@@ -222,7 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_gw = 24\n",
+    "target_gw = num_gameweeks\n",
     "# Assume create_goalkeeper_features function is defined as before\n",
     "midfielder_features = create_midfielder_features(gw_data_frames, target_gw - 1)\n",
     "\n",
